--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,16 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
     "@react-spring/web": "^9.7.5",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "firebase": "^10.14.1",
+    "jsonwebtoken": "^9.0.2",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
