--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.3",
     "@react-spring/web": "^9.7.5",
     "bcryptjs": "^2.4.3",
