--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,12 @@
     "@react-spring/web": "^9.7.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "docx": "^9.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
